<resources>
    <string name="app_name">Moms Planner</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_activity_to_do"> To Do</string>
    <string name="title_activity_appointments">Appointments</string>
    <string name="title_activity_members">Family Members</string>
    <string name="title_activity_contacts">Important Contacts</string>
    <string name="add_task_button_content_description">Add new task </string>
    <string name="add_appt_button_content_description">Add new appointment </string>
    <string name="add_member_button_content_description">Add new family member </string>
    <string name="add_contact_button_content_description">Add new contact </string>


    <string name="contact_title_default">Title</string>
    <string name="address_default">Address is Not Available</string>
    <string name="email_default">Email is Not Available</string>
    <string name="phone_default">Phone Number is Not Available</string>


    <string name="family_members_button">Family Members</string>
    <string name="to_do_button">To Do</string>
    <string name="appointments_button">Appointments</string>
    <string name="important_contacts_button">Important Contacts</string>


    <string name="task_default">Task</string>
    <string name="priority_default">Low</string>
    <string name="due_by_default"> N/A </string>
    <string name="owner_default">No Owner</string>
    <string name="title_activity_login">Log in</string>

    <!--Strings related to Appointment Activity-->

    <string name="appointment_location_title">Location: </string>
    <string name="appointment_date_title">Date: </string>
    <string name="appointment_time_title">Time: </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_login">Log In </string>
    <string name="action_login_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_link">You Do not have an account? Sign up</string>
    <string name="password_reset_link"> Forgot Your Password? </string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="password_reset_message">We have sent you the instructions to reset your password! </string>
    <string name="reset_fail_message">Failed to send reset email! </string>
    <!-- Strings related to sign up -->

    <string name="title_activity_signup">Sign Up</string>
    <string name="action_sign_up">Sign Up </string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="sigin_link">Already have an account? login </string>
    <string name="empty_email_error">Please, enter valid email address!</string>
    <string name="empty_password_error">Please, enter password!</string>
    <string name="short_password_error">Password too short, enter minimum 8 characters!</string>
    <string name="sign_up_error">Sign Up failed...</string>


    <!-- Strings Related to Password Reset Screen -->
    <string name="reset_prompt">Please enter your email id so we can send you the instructions to reset yor password. </string>
    <string name="forgot_password">Forgot Password? </string>
    <string name="reset_password_button">Reset Password</string>
    <string name="back_button"> Back </string>

    <!-- Strings for add members xml-->
    <string name="prompt_name"> Name </string>
    <string name="dob_prompt">Date of Birth </string>
    <string name="add_button">Add </string>
    <string name="cancel_button">Cancel </string>

    <!--Strings for add to-do tasks xml-->
    <string name="task_hint">Task</string>
    <string name="high_priority">High</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="due_by_hint">Due By</string>
    <string name="spinner_owner_prompt">Owner</string>
    <string name="spinner_filter_prompt">Filter </string>


    <!--Strings for add appointments xml-->
    <string name="prompt_appt_title">Title </string>
    <string name="prompt_appt_location"> Where? </string>
    <string name="prompt_appt_date">Date </string>
    <string name="prompt_appt_time">Time </string>
    <string name="appt_time">%02d : %02d  %s </string>

    <!-- Strings for add contacts xml-->
    <string name="address_prompt">Address</string>
    <string name="unit_prompt">Unit# </string>
    <string name="city_prompt">City</string>
    <string name="state_prompt">State</string>
    <string name="zip_code_prompt">Zip Code</string>
    <string name="phone_prompt">Phone# </string>
    <string name="email_prompt">Email</string>

    <!-- Strings related to recyclerview items-->
    <string name="owner_title">Owner: </string>
    <string name="due_by_title">Due By: </string>
    <string name="priority_title">Priority: </string>
    <string name="title_default">Title</string>
    <string name="appt_location">No Location</string>
    <string name="member_name_default">Member Name</string>
    <string name="member_dob_default">NA</string>
    <string name="priority_low"> Low </string>
    <string name="priority_medium"> Medium</string>
    <string name="priority_high"> High </string>


    <string name="appwidget_text">To Do List</string>
    <string name="add_widget">Add widget</string>
<!-- Notifications Strings-->

    <string name="to_do_channel_name">To Do Channel</string>
    <string name="appointment_channel_name">Appointments Channel</string>
    <string name="appointment_notification_title">Upcoming Appointments</string>
    <string name="overdue_tasks_notification_title">Overdue Tasks </string>
    <string name="appointments_notifications_content">You have %1$d upcoming appointment/s</string>
    <string name="overdue_tasks_notifications_content">You have %1$d Overdue task/s</string>

    <!-- Error Messages-->
    <string name="error_loading_data"> Data cannot be loaded now, please try again later.. </string>
    <string name="appt_title_empty">Appointment title cannot be empty.. </string>
    <string name="appt_date_empty"> Appointment date cannot be empty.. </string>
    <string name="appt_time_empty"> Appointment time cannot be empty..</string>
    <string name="member_name_empty">Members name cannot be empty.. </string>
    <string name="task_title_empty"> Task title cannot be empty.. </string>
    <string name="contact_title_empty">Contact title cannot be empty..</string>
    <string name="contact_empty">You have to add at least one contact..</string>


</resources>
