<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_padding_small"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:layout_marginTop="42dp"
    android:paddingBottom="42dp"
    >


    <Button
        android:id="@+id/to_do_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_button_height"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:textSize="@dimen/large_text_size"
        android:text="@string/to_do_button"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.Buttons"
        />

    <Button
        android:id="@+id/appointment_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_button_height"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:textSize="@dimen/large_text_size"
        android:text="@string/appointments_button"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.Buttons"
        />

    <Button
        android:id="@+id/contacts_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_button_height"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:textSize="@dimen/large_text_size"
        android:text="@string/important_contacts_button"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.Buttons"
        />

    <Button
        android:id="@+id/family_members_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_button_height"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:textSize="@dimen/large_text_size"
        android:text="@string/family_members_button"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.Buttons"
        />


</LinearLayout>

</ScrollView>
